# license-signer

./: .gitignore  Cargo.toml  README.md  example.md  license.json  license_pk.hex
src/: main.rs
